examples/expected/check_invalid_index_type.txt
error[E2001]: type mismatch: expected I64, got Bool
  --> examples/invalid_index_type.tp:3:14
   |
 3 |   let y = xs[true];
   |              ^^^^
